[package]
name = "http-file-server"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]

# Web Framework:
axum = { version = "0.7.5", features = ["http2"] }

# Middleware:
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-full"] }

# Async Runtime:
tokio = { version = "1.37.0", features = ["full"] }

# Logging:
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables:
envy = "0.4.2"

# Serialisation/Deserialisation:
serde = { version = "1.0", features = ["derive"] }
